--- a/HMineral/Base.lproj/LaunchScreen.storyboard
+++ b/HMineral/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,44 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" HACETTEPE MİNERAL TEKNOLOJİLERİ " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vw0-X6-6RK">
+                                <rect key="frame" x="142" y="415" width="316" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="316" id="DIe-YN-VPt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.050980392159999999" green="0.20000000000000001" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cevher hazırlamada uzman..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0AG-nZ-ObB">
+                                <rect key="frame" x="189" y="461" width="222" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="222" id="HpT-Jf-AKs"/>
+                                    <constraint firstAttribute="height" constant="21" id="lTm-2m-ryO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sidebar-logo1.png" translatesAutoresizingMaskIntoConstraints="NO" id="xHK-sT-5C1">
+                                <rect key="frame" x="209" y="232" width="182" height="136"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="182" id="yWY-WH-vhD"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Vw0-X6-6RK" firstAttribute="top" secondItem="xHK-sT-5C1" secondAttribute="bottom" constant="47" id="7AX-W6-fVR"/>
+                            <constraint firstItem="xHK-sT-5C1" firstAttribute="centerX" secondItem="Vw0-X6-6RK" secondAttribute="centerX" id="Cq9-VJ-V0k"/>
+                            <constraint firstItem="xHK-sT-5C1" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="212" id="Jbg-2i-EP0"/>
+                            <constraint firstItem="0AG-nZ-ObB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KK7-NQ-uJp"/>
+                            <constraint firstItem="xHK-sT-5C1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="O52-UN-7E5"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0AG-nZ-ObB" secondAttribute="bottom" constant="118" id="UNG-Dd-sZn"/>
+                            <constraint firstItem="Vw0-X6-6RK" firstAttribute="centerX" secondItem="0AG-nZ-ObB" secondAttribute="centerX" id="q7t-AD-PbI"/>
+                            <constraint firstItem="0AG-nZ-ObB" firstAttribute="top" secondItem="Vw0-X6-6RK" secondAttribute="bottom" constant="23" id="ywS-et-LSv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +61,7 @@
             <point key="canvasLocation" x="211" y="265"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sidebar-logo1.png" width="290" height="217"/>
+    </resources>
 </document>
